k8s/manifests/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: lawoffice
  labels:
    app.kubernetes.io/part-of: lawoffice
